# rust-learning

./: Cargo.toml  LICENSE  README.md
introduction/: README.md
introduction/exercises/: 01_enums.rs  02_match.rs  03_results.rs  04_errors.rs  05_iterators.rs
introduction/solutions/: 01_enums.rs  02_match.rs  03_results.rs  04_errors.rs  05_iterators.rs
src/: main.rs
